--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,4 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Test with pytest
       run: |
+        poetry run flake8 brain_games
+ 
+    - name: Test with pytest
+      run: |
         make lint
