--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,6 +25,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Test with pytest
-      run: |
-        poetry run flake8 brain_games
+      run: make run
  
