--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,5 +25,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Test with pytest
-      run: make run
+      run: make lint
  
