--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: install
-      run: make install
- 
+      run: |
+          pip install poetry
+          make install
+
     - name: Test with pytest
-      run: make lint
+      run: |
+          make lint
  
